# finance-manager

finance_manager/: .gitignore  README.md  build.py  generate_icon.py  installer.iss  main.spec  pyproject.toml
finance_manager/src/finance_manager/ai/prompts/: categorize.txt
finance_manager/src/finance_manager/database/: connection.py
finance_manager/src/finance_manager/importers/: pdf_importer.py
finance_manager/src/finance_manager/repositories/: finance_repository.py
finance_manager/src/finance_manager/services/: budget_service.py  export_service.py  import_service.py
finance_manager/src/finance_manager/ui/: application.py  main_window.py
finance_manager/src/finance_manager/ui/dialogs/: account_dialog.py  budget_dialog.py  first_run_dialog.py  goal_dialog.py  holding_dialog.py  settings_dialog.py  transaction_dialog.py
finance_manager/src/finance_manager/ui/views/: __init__.py  budgets_view.py  dashboard_view.py  goals_view.py  investments_view.py  reports_view.py
finance_manager/src/finance_manager/ui/widgets/: pie_chart.py
finance_manager/tests/integration/: test_categorizer.py  test_csv_importer.py  test_importer_registry.py  test_xlsx_importer.py
finance_manager/tests/unit/models/: test_budget.py  test_goal.py
finance_manager/tests/unit/services/: test_budget_service.py  test_export_service.py  test_goal_service.py  test_transaction_service.py
finance_manager/tests/unit/ui/: test_budgets_view.py  test_dashboard_view.py  test_first_run_dialog.py  test_goals_view.py  test_investments_view.py  test_reports_view.py  test_settings_dialog.py
finance_manager/tests/unit/utils/: test_currency.py  test_validators.py
